--- a/weekend-warrior-checkout.html
+++ b/weekend-warrior-checkout.html
@@ -379,7 +379,8 @@
 
     <script>
         // Initialize Stripe
-        var stripe = Stripe('pk_test_51Rfi8gFHvpgYQe5JTp7nbvVmj1zk9Hl2Vqmb2arwHbDh2SZVvndRBPvuqeOnYIFV8Yn3d1HON1epPFyfYoqkvrtA00vZruwDiY');
+        var stripe = Stripe('pk_live_51Rfi8gFHvpgYQe5JjH2IN4Wu8x2hWcfSZrqWQD4NrmoUJjZoHmsHhHPtsX7eGDqxZYWL7BxLlw5LOVSt09qadsPv00vv83dbcs
+');
         var elements = stripe.elements();
         
         var cardElement = elements.create('card', {
