--- a/index.html
+++ b/index.html
@@ -2462,7 +2462,7 @@ src="https://www.facebook.com/tr?id=1383551356849358&ev=PageView&noscript=1"
     
     <div class="footer-disclaimer">
         Independent third-party tool. Not affiliated with, endorsed by, or sponsored by any marketplace platform. Data provided for informational purposes only. All trademarks are property of their respective owners.
-        | <a href="/terms.html">Terms</a> | <a href="/privacy.html">Privacy</a>
+        | <a href="/terms.html">Terms</a> | <a href="/privacy.html">Privacy</a> | <a href="/faq.html">FAQ</a>
     </div>
     
     <!-- PWA Service Worker Registration -->
