--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@ src="https://www.facebook.com/tr?id=1383551356849358&ev=PageView&noscript=1"
         // ============================================
         const SCAN_CONFIG = {
             FREE_SCANS: 3,
-            SALES_PAGE_URL: 'https://elaroedge.com/itemvalue'
+            SALES_PAGE_URL: '/pricing.html'
         };
 
         // ============================================
