--- a/moving-master-checkout.html
+++ b/moving-master-checkout.html
@@ -308,7 +308,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="https://elaroedge.com/itemvalue" class="back-link">← Back to pricing</a>
+        <a href="https:///pricing.html" class="back-link">← Back to pricing</a>
         
         <div class="card">
             <!-- Checkout Form -->
