--- a/pricing.html
+++ b/pricing.html
@@ -1130,7 +1130,7 @@
             <p class="final-cta-subtext">✓ 30-day money back &nbsp;&nbsp;&nbsp; ✓ Instant access &nbsp;&nbsp;&nbsp; ✓ No signup required</p>
 
             <div class="final-guarantee">
-                Try it risk-free. If you don't make back the cost in your first 5 items, we'll refund you. That's how confident we are.
+                30-day money-back guarantee. If you don't find value worth the cost of your bundle, just email hello@itemvalue.app and we'll refund you—no questions asked.
             </div>
         </div>
     </section>
