--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,8 @@ src="https://www.facebook.com/tr?id=1383551356849358&ev=PageView&noscript=1"
                     setShowEmailCapture(true);
                 }
             };
-
+            
+let isAnalyzing = false;
            const analyzeWithAI = async () => {
     // Prevent double-calls
     if (loading) {
