--- a/pricing.html
+++ b/pricing.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2PXG6EEVC0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-2PXG6EEVC0');
+</script>
     <!-- Meta Pixel Code -->
     <script>
     !function(f,b,e,v,n,t,s)
