--- a/index.html
+++ b/index.html
@@ -3505,7 +3505,22 @@ display: block;
                                         )}
                                     </div>
                                 )}
-
+{result.effortScore && (
+                        <div>
+                            ...existing code...
+                        </div>
+                    )}
+                    
+                    {/* Trigger email capture after first scan */}
+                    {(() => {
+                        const scanData = getScanData();
+                        if (scanData.count === 1 && !hasEmailCaptured()) {
+                            setTimeout(() => {
+                                showEmailCapture(result.estimatedValue || result.recommendation);
+                            }, 1500); // Show after 1.5 seconds
+                        }
+                        return null;
+                    })()}
                                 {result.marketData && (
                                     <div className="market-data">
                                         <div className="market-data-title">📊 Real Marketplace Data</div>
