--- a/index.html
+++ b/index.html
@@ -3511,16 +3511,18 @@ display: block;
                         </div>
                     )}
                     
-                   {/* Trigger email capture after first scan */}
+                  )}
+                    
+                  {/* Trigger email capture after first scan */}
                     {(() => {
-                        const scanData = getScanData();
-                        if (scanData.count === 1 && !hasEmailCaptured()) {
-                            setTimeout(() => {
-                                showEmailCapture(result.estimatedValue || result.recommendation);
-                            }, 1500); // Show after 1.5 seconds
-                        }
+                        setTimeout(() => {
+                            const scanData = getScanData();
+                            if (scanData && scanData.count === 1 && !hasEmailCaptured()) {
+                                showEmailCapture(result.estimatedValue || "$45");
+                            }
+                        }, 1500);
                         return null;
-                    })()}
+                   })()}
                                 {result.marketData && (
                                     <div className="market-data">
                                         <div className="market-data-title">📊 Real Marketplace Data</div>
