--- a/index.html
+++ b/index.html
@@ -2082,11 +2082,11 @@ display: block;
         // ============================================
         // CONFIGURATION
         // ============================================
-        const /*SCAN_CONFIG = {
+        const SCAN_CONFIG = {
             FREE_SCANS: 3,
             SALES_PAGE_URL: '/pricing.html'
         };
-*/
+
         // ============================================
         // GA4 TRACKING
         // ============================================
