--- a/index.html
+++ b/index.html
@@ -2119,7 +2119,7 @@ const SCAN_CONFIG = {
             return;
         }
         }
-    
+   window.showEmailCapture = showEmailCapture; 
     // Handle email submission
     function handleEmailSubmit(event) {
         event.preventDefault();
