--- a/index.html
+++ b/index.html
@@ -3786,5 +3786,8 @@ const SCAN_CONFIG = {
             });
         }
     </script>
-</body>
+</<div class="email-capture-container" id="emailCapture" style="display: none;">
+    <!-- All your email capture HTML here -->
+</div>
+body>
 </html>
