--- a/index.html
+++ b/index.html
@@ -2068,10 +2068,10 @@ display: block;
     <script type="text/babel">
     <script type="text/babel">
         const { useState, useEffect } = React;
-const SCAN_CONFIG = {
+const /*SCAN_CONFIG = {
             FREE_SCANS: 3,
             SALES_PAGE_URL: '/pricing.html'
-        };
+        };*/
 
         // ============================================
         // CONFIGURATION
