--- a/index.html
+++ b/index.html
@@ -3787,5 +3787,5 @@ const /*SCAN_CONFIG = {
                 <div class="progress-dot"></div>
                 <div class="progress-dot"></div>
             </div>
-body>
+<body>
 </html>
