--- a/index.html
+++ b/index.html
@@ -2182,8 +2182,8 @@ const SCAN_CONFIG = {
                         const freshData = {
                             tier: 'free',
                             scansRemaining: 0,
-                            totalScans: SCAN_CONFIG.FREE_SCANS,
-                            used: SCAN_CONFIG.FREE_SCANS,
+                            totalScans: 3,
+                            used: 3,
                             expiryDate: null,
                             bundle: null
                         };
@@ -2198,8 +2198,8 @@ const SCAN_CONFIG = {
             
             const defaultData = {
                 tier: 'free',
-                scansRemaining: SCAN_CONFIG.FREE_SCANS,
-                totalScans: SCAN_CONFIG.FREE_SCANS,
+                scansRemaining: 3,
+                totalScans: 3,
                 used: 0,
                 expiryDate: null,
                 bundle: null
