--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,7 @@ src="https://www.facebook.net/tr?id=1383551356849358&ev=PageView&noscript=1"
             let scans = 0;
             let days = 0;
             
-            ifunction activateAccessCode(code) {
+            function activateAccessCode(code) {
     const upperCode = code.toUpperCase();
     let bundle = null;
     let scans = 0;
