--- a/index.html
+++ b/index.html
@@ -1172,7 +1172,7 @@ src="https://www.facebook.net/tr?id=1383551356849358&ev=PageView&noscript=1"
     
     localStorage.setItem('itemvalue_scans', JSON.stringify(newData));
     alert(`${bundle} activated! You have ${scans} scans available.`);
-}f (upperCode.includes('WEEKEND')) {
+} (upperCode.includes('WEEKEND')) {
                 bundle = 'Weekend Warrior';
                 scans = 50;
                 days = upperCode.includes('YEAR') ? 365 : 30;
