--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@ src="https://www.facebook.net/tr?id=1383551356849358&ev=PageView&noscript=1"
         days = 365;
     }
     // Existing codes below...
-    else if (upperCode.includes('WEEKEND')) {
+    } else if (upperCode.includes('WEEKEND')) {
         bundle = 'Weekend Warrior';
         scans = 50;
         days = upperCode.includes('YEAR') ? 365 : 30;
