--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,7 @@ src="https://www.facebook.net/tr?id=1383551356849358&ev=PageView&noscript=1"
         days = 365;
     }
     // $27 Challenge
-    else if (upperCode === 'CHALLENGE100') {
+    } else if (upperCode === 'CHALLENGE100') {
         bundle = 'Challenge Bundle';
         scans = 100;
         days = 365;
