--- a/index.html
+++ b/index.html
@@ -1128,11 +1128,11 @@ src="https://www.facebook.net/tr?id=1383551356849358&ev=PageView&noscript=1"
         days = 30;
     }
     // $7 Starter Pack
-    else if (upperCode === 'STARTER25') {
+   } else if (upperCode === 'STARTER25') {
         bundle = 'Starter Pack';
         scans = 25;
         days = 365;
-    }
+ 
     // $27 Challenge
     } else if (upperCode === 'CHALLENGE100') {
         bundle = 'Challenge Bundle';
