--- a/index.html
+++ b/index.html
@@ -1875,6 +1875,7 @@ input[type="text"].pulse-hint {
     </label>
     <input
     type="text"
+    autoFocus  
     placeholder="e.g., KitchenAid mixer, Levi's jeans, old iPad..."
     value={itemDescription}
     onChange={(e) => setItemDescription(e.target.value)}
