--- a/index.html
+++ b/index.html
@@ -2007,7 +2007,6 @@ input[type="text"].pulse-hint {
                                                 {paid ? 'PRO' : 'UPGRADE'}
                                             </div>
                                         </div>
-   )}
                                         <div className="analysis-option-desc">
                                             {paid 
                                                 ? 'More accurate with category, original price, urgency & condition details.'
@@ -2021,7 +2020,41 @@ input[type="text"].pulse-hint {
                                         </div>
                                     </div>
                                 </div>
-
+{/* Detailed Analysis Option - only show after at least 1 scan */}
+{(paid || (scanData.used && scanData.used >= 1)) && (
+    <div 
+        className={`analysis-option pro ${!paid ? 'locked' : ''}`}
+        onClick={() => {
+            if (paid) {
+                selectAnalysisType('detailed');
+            } else {
+                trackEvent('detailed_analysis_teaser_clicked');
+                setShowUpgrade(true);
+            }
+        }}
+    >
+        <div className="analysis-option-header">
+            <div className="analysis-option-title pro">
+                {!paid && <span className="lock-icon">🔒</span>}
+                ✨ Detailed Analysis
+            </div>
+            <div className={`analysis-option-badge ${paid ? 'pro' : 'locked'}`}>
+                {paid ? 'PRO' : 'UPGRADE'}
+            </div>
+        </div>
+        <div className="analysis-option-desc">
+            {paid 
+                ? 'More accurate with category, original price, urgency & condition details.'
+                : 'Unlock with any paid plan for more accurate recommendations.'}
+        </div>
+        <div className="analysis-option-features">
+            <span className="feature-tag pro">Category-specific data</span>
+            <span className="feature-tag pro">Effort score</span>
+            <span className="feature-tag pro">Urgency factors</span>
+            <span className="feature-tag pro">Defect adjustments</span>
+        </div>
+    </div>
+)}
                                 <button 
                                     className="back-button"
                                     onClick={() => setScreen('home')}
