--- a/estate-pro-checkout.html
+++ b/estate-pro-checkout.html
@@ -316,7 +316,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="https:///pricing.html" class="back-link">← Back to pricing</a>
+        <a href="/pricing.html" class="back-link">← Back to pricing</a>
         
         <div class="card">
             <!-- Checkout Form -->
