--- a/index.html
+++ b/index.html
@@ -1571,7 +1571,11 @@ input[type="text"].pulse-hint {
 /* ========== END TESTIMONIAL MODAL ========== */ </style>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+    <h1 style="font-family: Georgia, serif; text-align: center; padding: 40px 20px; color: #1E3A34;">
+        Scan Any Item. Know If It's Worth Selling.
+    </h1>
+</div>
 
     <script type="text/babel">
         const { useState, useEffect } = React;
