--- a/index.html
+++ b/index.html
@@ -1571,10 +1571,9 @@ input[type="text"].pulse-hint {
 /* ========== END TESTIMONIAL MODAL ========== */ </style>
 </head>
 <body>
-    <div id="root">
-    <h1 style="font-family: Georgia, serif; text-align: center; padding: 40px 20px; color: #1E3A34;">
-        Scan Any Item. Know If It's Worth Selling.
-    </h1>
+   <div id="root">
+    <h1>Item Value — Scan Any Item. Know If It's Worth Selling.</h1>
+    <p>Item Value is a free AI-powered tool that helps you decide whether to sell or donate your stuff. Simply snap a photo or type in what you have, and get instant resale value estimates based on real marketplace data. We calculate fees, shipping costs, and net profit so you know exactly what you'll pocket. Stop guessing and start making smarter decisions about your belongings. Works for electronics, clothing, furniture, collectibles, and more. Try your first 3 scans free — no signup required.</p>
 </div>
 
     <script type="text/babel">
