--- a/faq.html
+++ b/faq.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Frequently asked questions about Item Value. Learn how the AI-powered item scanner works, pricing bundles, effort scores, access codes, refunds, and more.">
     <title>FAQ - ItemValue</title>
     <style>
         * {
