--- a/pricing.html
+++ b/pricing.html
@@ -31,6 +31,7 @@ src="https://www.facebook.com/tr?id=897308342823736&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code --> <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Item Value pricing plans. Get scan bundles starting at $2 for a single scan, $7 for 25 scans, or bulk options up to 1000 scans. No subscription required.">
     <title>Get More Scans | Item Value</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
