--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Is This Worth Selling?</title>
+    <meta name="description" content="Item Value privacy policy. Learn how we collect, use, and protect your data including item descriptions, email, and payment information processed through Stripe.">
+    <title>Privacy Policy - Item Value</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -88,6 +89,6 @@
     <p>We may update this policy. Check this page for the latest version.</p>
     
     <h2>10. Contact</h2>
-    <p>Questions about privacy? Contact us through the app or website.</p>
+    <p>Questions about privacy? Contact us at <a href="mailto:hello@itemvalue.app">hello@itemvalue.app</a>.</p>
 </body>
 </html>
