--- a/index.html
+++ b/index.html
@@ -681,6 +681,13 @@ src="https://www.facebook.com/tr?id=897308342823736&ev=PageView&noscript=1"
 
         @keyframes emailSpinner { to { transform: rotate(360deg); } }
     </style>
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "v9pa63sy1j");
+</script>
 </head>
 <body>
     <div id="root"></div>
