--- a/pricing.html
+++ b/pricing.html
@@ -31,7 +31,6 @@ src="https://www.facebook.com/tr?id=897308342823736&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code --> <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Item Value pricing plans. Get scan bundles starting at $2 for a single scan, $7 for 25 scans, or bulk options up to 1000 scans. No subscription required.">
     <title>Get More Scans | Item Value</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -496,6 +495,30 @@ src="https://www.facebook.com/tr?id=897308342823736&ev=PageView&noscript=1"
                 gap: 12px;
             }
         }
+
+        /* --- As Seen On Badge --- */
+        .as-seen-on {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 6px;
+            padding: 16px 0 8px;
+            width: 100%;
+        }
+        .as-seen-on__image {
+            max-width: 300px;
+            width: 100%;
+            height: auto;
+            object-fit: contain;
+            opacity: 0.85;
+            transition: opacity 0.3s ease;
+        }
+        .as-seen-on__image:hover {
+            opacity: 1;
+        }
+        @media (max-width: 768px) {
+            .as-seen-on__image { max-width: 240px; }
+        }
     </style>
 </head>
 <body><script>
@@ -543,6 +566,9 @@ document.querySelectorAll('.quick-card-btn, .bulk-card-btn, .challenge-cta-btn')
         <div class="header-badge">You've used your free scans</div>
         <h1>Keep Finding Hidden Value</h1>
         <p>Pick the option that fits how much you want to scan. No subscription — just pay once.</p>
+        <div class="as-seen-on">
+            <img src="/as-seen-on-badge.png" alt="As Seen On CBS, NBC, ABC and over 250 news outlets" class="as-seen-on__image" loading="lazy">
+        </div>
     </header>
 
     <!-- Quick Options (Low-cost featured) -->
